# OpenWatchParty

./: .gitignore  .pre-commit-config.yaml  audit.md  justfile
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  security.yml
docs/development/: ci.md  contributing.md  file-transformation-integration.md  index.md  release.md  setup.md  testing.md
docs/jellyfin-plugin-repo/: manifest.json
docs/operations/: deployment.md  installation.md  troubleshooting.md
docs/technical/: plugin.md
infra/docker/: docker-compose.yml  server.Dockerfile
infra/docker/dev/: docker-compose.yml
infra/docker/dev/scripts/: jellyfin-entrypoint.sh
infra/docker/prod/: docker-compose.yml
infra/docker/scripts/: jellyfin-entrypoint.sh
infra/just/: build.just  clean.just  common.just  help.just  setup.just  test.just
make/: config.mk
scripts/: build-jellyfin-plugin.sh
src/clients/jellyfin-web/: app.js  playback.js  plugin.js  state.js  ws.js
src/clients/jellyfin-web/app/: lifecycle.js
src/clients/jellyfin-web/tests/: setup.js  (+2 more)
src/server/: .dockerignore  Cargo.toml  Dockerfile
src/server/.cargo/: config.toml
src/server/src/: auth.rs  main.rs  messaging.rs  routes.rs  tasks.rs  test_helpers.rs  utils.rs
src/server/src/room/: close.rs  leave.rs  mod.rs
src/server/src/ws/: connection.rs  constants.rs  dispatch.rs  handle_auth.rs  handle_chat.rs  handle_create.rs  handle_join.rs  handle_misc.rs  handle_playback.rs  mod.rs  pending_play.rs  validation.rs
src/server/src/ws/handlers/: auth.rs  chat.rs  create.rs  join.rs  misc.rs  mod.rs  playback.rs
(+16 files in other folders)
